--- a/src/apiExplorer.scss
+++ b/src/apiExplorer.scss
@@ -92,6 +92,7 @@
 
 .explorer-section-body .CodeMirror {
 	padding-left: 10px;
+	margin-bottom: 25px;
 }
 
 .explorer-section-body-toggler {
@@ -121,10 +122,6 @@
 }
 
 .explorer-section-try-param {
-	margin-bottom: 10px;
-}
-
-.explorer-section-try .row:first-child {
 	margin-bottom: 10px;
 }
 
@@ -197,7 +194,7 @@
 	color: rgba($primary, .6);
 	font-family: $font-family-secondary;
 	font-size: 11px;
-	font-weight: 500;
+	font-weight: 700;
 	margin: 0 0 20px 30px;
 	text-transform: uppercase;
 }
